Player turn colored text script added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           </div>
         </div>
       </div>
+      <p class="text-xs">Designed by <a href="https://github.com/Lucas-Drmz" class="text-blue-800 hover:underline">Lucas Drumez</a></p>
     </div>
     
     <script src="script.js"></script>
